fix spacing issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,6 +18,7 @@ body {
   background-color: #f5f5f5;
 }
 
+section {padding-top: 100px;}
 
 /* Custom page CSS
 -------------------------------------------------- */
